tests/NormalTests/paczka1/small_fuzzy/16548927.err
Error in line 4: nNK A625 92,0
Error in line 7: nNK S713 4,7
